# Curve

./: .gitignore  README.md  comp  compile.py  gravity  heavyComp  index.html  log  main.js  notes  testMain.js  workspace.js
compilation/: comp  comp.sh  gravity  heavyComp  heavyComp.sh  notes  updateGravity.sh
compliation/: comp
control/: main.js
docs/: 404.html  CNAME  core.html  core.js  core.min.js  coreSystem.html  curve.html  demo1.html  index.html  license  log  (+6 more)
main/1 - core/engine/rust/old/: Cargo.toml
main/1 - core/engine/rust/old/src/: engine.rs
main/1 - core/engine/rust/old/src/a_library/data_type/: mod.rs  polygon.rs
main/1 - core/engine/rust/old/src/a_library/math/: path_extrapolation.rs
main/1 - core/engine/rust/old/src/a_library/structure/web_gl/: WebGl2framebuffer.rs
main/1 - core/engine/rust/old/src/b_element/: element.rs
main/1 - core/engine/rust/old/src/b_element/element/: characterString.rs  circle.rs  circleWithOutline.rs  image.rs  path.rs  polygonWithOutline.rs
main/1 - core/engine/rust/old/src/d_render/: mod.rs
main/1 - core/engine/rust/old/trash/old_tests/b_element_test/: mod.rs
trash/_archive-1/: Cargo.toml
trash/_archive-1/src/: lib.rs
trash/_archive-1/src/a_library/data_type/: bounding_box.rs  colour.rs  event.rs  line.rs  path_joint_type.rs  printing_mode_position.rs
trash/_archive-1/src/a_library/math/: array_math.rs  cartesian_angle_adjust.rs
trash/_archive-1/src/a_library/wasm/: to_js_sys.rs
trash/_archive-1/src/b_element/element/: character.rs  circle.rs  circleWithOutline.rs  rectangleWithOutline.rs
trash/_archive-1/src/c_arrangement/: mod.rs
trash/_archive-1/src/e_viewport/: mod.rs
trash/_archive-1/src/g_callback/: mod.rs
(+3263 files in other folders)
