[package]
name = "core_engine"
version = "0.1.0"
authors = ["brandon"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "^0.1.6"
js-sys = "^0.3.40"
wasm-bindgen = "^0.2.63"


[dependencies.web-sys]
version = "^0.3.4"
features = [
  'Document',
  'Element',
  'Window',

  'Worker',
  'OffscreenCanvas',
  'ImageBitmap',
  'MessageEvent',
  
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlUniformLocation',
  'WebGlProgram',
  'WebGlShader',
  'WebGlVertexArrayObject',
  'WebGlTexture',
  'WebGlFramebuffer',
  'WebGlRenderbuffer',
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]